<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/purple_200"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="99dp"
        android:layout_height="94dp"
        android:src="@drawable/ic_settings_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/settings_game"
        android:textColor="@color/text_yellow"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cdt_of_end"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton_nb_tests"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="buttonCheckNbTests"
            android:text="@string/end_nb_of_tests" />
        <RadioButton
            android:id="@+id/radioButton_max_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonCheckMaxScore"
            android:text="@string/end_max_score"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:text="@string/nb_to_reach" />

    <EditText
        android:id="@+id/edittext_number_to_reach"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:hint="@string/edit_nb_to_reach" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/button_ok_settings_many_players"
            android:layout_width="278dp"
            android:layout_height="86dp"
            android:onClick="buttonSetSettingsManyPlayers"
            android:text="@string/next"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/image_next_settings"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_alignRight="@id/button_ok_settings_many_players"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>